--- a/assets/css/theme/default.css
+++ b/assets/css/theme/default.css
@@ -36,6 +36,25 @@ section.slide h2 {
 section.slide h3 {
   font-size: 2rem; }
 
+section.slide blockquote {
+  position: relative;
+  font-style: italic;
+  z-index: 0;
+  padding: 20px;
+  background: #eee;
+  border-radius: 5px; }
+  section.slide blockquote:after {
+    content: '"';
+    font-size: 10rem;
+    position: absolute;
+    color: #bbb;
+    top: -70px;
+    left: -30px;
+    z-index: -10; }
+
+section.slide ul {
+  line-height: 5rem; }
+
 footer {
   background: #199eff;
   color: #fff;
