--- a/src/sass/theme/default/default.scss
+++ b/src/sass/theme/default/default.scss
@@ -43,6 +43,29 @@ section.slide {
   h3 {
     font-size: 2rem;
   }
+
+  blockquote {
+    position: relative;
+    font-style: italic;
+    z-index: 0;
+    padding: 20px;
+    background: #eee;
+    border-radius: 5px;
+
+    &:after {
+      content: '"';
+      font-size: 10rem;
+      position: absolute;
+      color: #bbb;
+      top: -70px;
+      left: -30px;
+      z-index: -10;
+    }
+  }
+
+  ul {
+    line-height: 5rem;
+  }
 }
 
 footer {
